--- a/mandoc.css
+++ b/mandoc.css
@@ -17,6 +17,7 @@ body {		background: var(--bg);
 		color: var(--fg);
                 max-width: 800px;
                 margin: 50px auto;
+                line-height: 1.6em;
 		font-family: Arial,sans-serif; }
 h1 {		font-size: 110%; }
 table {		margin-top: 0em;
@@ -34,6 +35,7 @@ ul, ol, dl {	margin-top: 0em;
 		margin-bottom: 0em; }
 li, dt {	margin-top: 1em; }
 pre {		font-family: inherit; }
+a { text-decoration: none; }
 
 .permalink {	color: inherit;
 		font: inherit;
@@ -72,7 +74,7 @@ td.foot-os {	text-align: right; }
 
 .manual-text {
 		margin-left: 3.8em; }
-.Nd { }
+.Nd { display: inline; }
 section.Sh { }
 h1.Sh {		margin-top: 1.2em;
 		margin-bottom: 0.6em;
